compiler-rust/bloodc/src/parser/snapshots/bloodc__parser__tests__inline_module.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Module(
            ModItemDecl {
                attrs: [],
                vis: Private,
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 5,
                        end: 10,
                        start_line: 2,
                        start_col: 5,
                    },
                },
                body: Some(
                    [
                        Function(
                            FnDecl {
                                attrs: [],
                                vis: Private,
                                qualifiers: FnQualifiers {
                                    is_const: false,
                                    is_async: false,
                                    is_unsafe: false,
                                },
                                name: Spanned {
                                    node: SymbolU32 {
                                        value: 2,
                                    },
                                    span: Span {
                                        start: 20,
                                        end: 27,
                                        start_line: 3,
                                        start_col: 8,
                                    },
                                },
                                type_params: None,
                                params: [],
                                return_type: None,
                                effects: None,
                                where_clause: None,
                                body: Some(
                                    Block {
                                        statements: [],
                                        expr: None,
                                        span: Span {
                                            start: 30,
                                            end: 32,
                                            start_line: 3,
                                            start_col: 18,
                                        },
                                    },
                                ),
                                span: Span {
                                    start: 17,
                                    end: 32,
                                    start_line: 3,
                                    start_col: 5,
                                },
                            },
                        ),
                        Function(
                            FnDecl {
                                attrs: [],
                                vis: Public,
                                qualifiers: FnQualifiers {
                                    is_const: false,
                                    is_async: false,
                                    is_unsafe: false,
                                },
                                name: Spanned {
                                    node: SymbolU32 {
                                        value: 3,
                                    },
                                    span: Span {
                                        start: 44,
                                        end: 50,
                                        start_line: 4,
                                        start_col: 12,
                                    },
                                },
                                type_params: None,
                                params: [],
                                return_type: None,
                                effects: None,
                                where_clause: None,
                                body: Some(
                                    Block {
                                        statements: [],
                                        expr: None,
                                        span: Span {
                                            start: 53,
                                            end: 55,
                                            start_line: 4,
                                            start_col: 21,
                                        },
                                    },
                                ),
                                span: Span {
                                    start: 41,
                                    end: 55,
                                    start_line: 4,
                                    start_col: 9,
                                },
                            },
                        ),
                    ],
                ),
                span: Span {
                    start: 1,
                    end: 57,
                    start_line: 2,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 1,
        end: 57,
        start_line: 2,
        start_col: 1,
    },
}
